Xfce v4.18: Fix odd gap between panel elements, Fix #263

--- a/gtk-3.0/apps/_xfce.scss
+++ b/gtk-3.0/apps/_xfce.scss
@@ -1,10 +1,16 @@
-.xfce4-panel.panel {
+.xfce4-panel {
+
+  border-radius: 0;
+
+  &.panel{
     background-color: $panel_bg_color;
     text-shadow: none;
     -gtk-icon-shadow: none;
 
     button, button.flat { @extend %panelbutton; }
   }
+
+}
 
   #tasklist-button {
     color: transparentize($panel_fg_color, 0.2);
